# Yet-Another-Interface-File

./: .aidigestignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  output.txt  setup.cfg  setup.py
.agents/skills/yaif-generation/: SKILL.md
.clawbert/sessions/: 20260219_141031.json
examples/: ci_discord.yaif  clinic.yaif  ecommerce.yaif  jobs.yaif  project_tracker.yaif  rpg.yaif  smart_home.yaif
yaif/: __init__.py  __main__.py  core.py  discord_webhook.py  models.py  parser.py  pyproject.toml  watcher.py
yaif/generators/: __init__.py  base.py  discord.py  html.py  jsonschema.py  python.py  typescript.py
yaif/modules/discord/: __init__.py  bot.py  terminal.py  webhook.py
yaif/modules/discord/bot_actions/: __init__.py  channels.py  conflict.py  emojis.py  roles.py  server.py
yaif/modules/html/: __init__.py  generator.py  parser.py  theme.py
yaif/modules/html/renderers/: __init__.py  chat.py  dashboard.py  form.py  table.py
